added route for activating user
